--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,13 +1,14 @@
+---
 # Name of your application. Used to uniquely configure containers.
 service: oho
 
 # Name of the container image.
-image: your-user/oho
+image: pragdave/oho
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 159.65.244.39
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +20,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: mono.ppstage.dev
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: pragdave
 
   # Always use an access token rather than real password when possible.
   password:
@@ -48,7 +49,7 @@ env:
 
     # Match this to any external database server to configure Active Record correctly
     # Use oho-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
+    DB_HOST: DB_HOST
 
     # Log everything from Rails
     # RAILS_LOG_LEVEL: debug
@@ -65,7 +66,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "oho_storage:/rails/storage"
+  - "storage:/rails/storage"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
