make solid stuff shared

--- a/config/database.yml
+++ b/config/database.yml
@@ -57,16 +57,15 @@ production:
 
   queue:
     <<: *sqlite
-    # database: <%= ENV["SOLID_ROOT"]%>/solid_queue.sqlite
-    database: storage/oho_solid_queue.sqlite3
+    database: <%= ENV["SOLID_ROOT"]%>/oho_solid_queue.sqlite
     migrations_paths: db/queue_migrate
 
   cable:
     <<: *sqlite
-    database: storage/oho_solid_cable.sqlite3
+    database: <%= ENV["SOLID_ROOT"]%>/oho_solid_queue.sqlite
     migrations_paths: db/cable_migrate
 
   cache:
     <<: *sqlite
-    database: storage/oho_solid_cache.sqlite3
+    database: <%= ENV["SOLID_ROOT"]%>/oho_solid_queue.sqlite
     migrations_paths: db/cache_migrate
