--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^8.0.16",
     "@popperjs/core": "^2.11.8",
     "@rails/activestorage": "^8.0.200",
+    "@rollup/plugin-inject": "^5.0.5",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
@@ -13,6 +14,7 @@
     "bootswatch": "^5.3.6",
     "chart.js": "^4.5.0",
     "chartkick": "^5.0.1",
+    "jquery": "^3.7.1",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
